--- a/src/network/templates/network/index.html
+++ b/src/network/templates/network/index.html
@@ -1,5 +1,6 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+    {% if user.is_authenticated %}
+    {% endif %}
 {% endblock %}
