--- a/src/network/templates/network/liked-posts.html
+++ b/src/network/templates/network/liked-posts.html
@@ -1,44 +1,22 @@
 {% extends "network/layout.html" %}
 
 {% block title %}
-    Home
+    Liked Posts
 {% endblock %}
 
 {% block body %}
-    {% if user.is_authenticated %}
-        <div class="p-5 m-10 mx-auto">
-            <form action="{% url 'index' %}" method='post'>
-            {% csrf_token %}
-            {{form.as_p}}
-            {% if message %}
-                {{message.content}}
-            {% endif %}
-            <input class="btn btn-outline-success btn-large my-2" type='submit' value='Submit'>
-            </form>
-        </div>    
-    {% endif %}
     {% for post in pg_posts %}
         <div id="post-{{post.id}}" class="card text-center border-dark mx-auto m-5" style="max-width: 40rem">
             <div class="card-body">
             <a href="{% url 'profile-page' post.creator.id %}"><h3 class="card-title">{{post.creator}}</h3></a>
             <h6 class="card-subtitle">{{post.created}}</h6>
             <div id="hide-{{post.id}}" class="to-hide m-2"><p class="card-text">{{post.content}}</p></div>
-            <div id="show-{{post.id}}" class="to-show container p-10 mx-auto text-center">
-                <div class="row mx-auto" style="align-items:center;">
-                    <form class="col-sm mx-auto m-2" action="{% url 'edit-post' post.id %}" method="POST">
-                        {% csrf_token %}
-                        {{e_form}}
-                        <input data-submit-id="{{post.id}}" class="btn btn-outline-dark m-2 submitor" type="submit" value="Submit">
-                    </form>
-                </div>
-            </div>
             {% if request.user != post.creator %}
                 <div>
                     <button id="lepostah-{{post.id}}" data-lpostah="{{post.id}}" class="btn btn-dark liker">{% if post.id in whoYouLiked %}Unlike!{%else%}Like!{%endif%}</button>
                 </div>
             {% endif %}
-            <div class="card-footer m-3"><button data-destroy-id="{{post.id}}" class="btn btn-danger hider" style="width: 10rem">Hide This Post</button></div>
-            <div class="card-footer m-3">{% if request.user == post.creator %}<button data-post-id="{{post.id}}" class="btn btn-primary editor" style="width: 10rem">Edit Post</button>{% endif %}</div>    
+            <div class="card-footer m-3"><button data-destroy-id="{{post.id}}" class="btn btn-danger hider" style="width: 10rem">Hide This Post</button></div> 
             </div>
         </div>
     {% empty %}
