--- a/src/network/templates/network/profile.html
+++ b/src/network/templates/network/profile.html
@@ -1,24 +1,78 @@
 {% extends "network/layout.html" %}
 
 {% block title %}
-    {{user}}
+    {{p_user}}
 {% endblock %}
 
 {% block body %}
-    {% for post in posts %}
-        <div class="card text-center border-dark mx-auto m-5" style="width: 60rem;">
+    {% if p_user != request.user %}
+        <div class="container text-center">
+            <div class="row py-0" style="align-items:center;">
+                <h4 class="col-sm m-2 mb-0">{{p_user}}</h4>
+                <div class="col-sm mx-auto m-2 mt-0">
+                    <form action="{% url 'profile-page' p_user.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type=hidden name="action" value="{% if isFollowing %} Unfollow {% else %} Follow {% endif %}"></input>
+                        <button type="submit" class="btn btn-dark">{% if isFollowing %} Unfollow {% else %} Follow {% endif %}</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
+    <div class="container text-center">
+        <div class="row row-cols-1">
+            <div class="card text-bg-dark border-dark col-sm m-2">
+                <div class="card-header">Following</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">{{following}}</li>
+                </ul>
+            </div>
+            <div class="card border-dark col-sm m-2">
+                <div class="card-header">Followers</div>
+                    <li class="list-group-item">{{followers}}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    {% for post in pg_posts %}
+        <div id="post-{{post.id}}" class="card text-center border-dark mx-auto m-5" style="max-width: 40rem">
             <div class="card-body">
             <a href="{% url 'profile-page' post.creator.id %}"><h3 class="card-title">{{post.creator}}</h3></a>
             <h6 class="card-subtitle">{{post.created}}</h6>
-            <p class="card-text">{{post.content}}</p>
-            <div>
-                <span><a class="btn btn-dark" href="#">Like!</a></span>
-                <span class="btn">{{post.likes}}</span>
+            <div id="hide-{{post.id}}" class="to-hide m-2"><p class="card-text">{{post.content}}</p></div>
+            <div id="show-{{post.id}}" class="to-show container p-10 mx-auto text-center">
+                <div class="row mx-auto" style="align-items:center;">
+                    <form class="col-sm mx-auto m-2" action="{% url 'edit-post' post.id %}" method="POST">
+                        {% csrf_token %}
+                        {{e_form}}
+                        <input data-submit-id="{{post.id}}" class="btn btn-outline-dark m-2 submitor" type="submit" value="Submit">
+                    </form>
+                </div>
             </div>
-            <div class="card-footer m-3"><button class="btn btn-danger" style="width: 25rem" id="check">Hide This Post :(</button><div>
+            {% if request.user != post.creator %}
+                <div>
+                    <button id="lepostah-{{post.id}}" data-lpostah="{{post.id}}" class="btn btn-dark liker">{% if post.id in whoYouLiked %}Unlike!{%else%}Like!{%endif%}</button>
+                </div>
+            {% endif %}
+            <div class="card-footer m-3"><button data-destroy-id="{{post.id}}" class="btn btn-danger hider" style="width: 10rem">Hide This Post</button></div>
+            <div class="card-footer m-3">{% if request.user == post.creator %}<button data-post-id="{{post.id}}" class="btn btn-primary editor" style="width: 10rem">Edit Post</button>{% endif %}</div>    
             </div>
         </div>
     {% empty %}
         <h2 class="m-5" style="color:red">THERE ARE NO POSTS RN</h2>
     {% endfor %}
+    <nav aria-label="Page navigation example">
+        <ul class="pagination mx-3">
+            {% if pg_posts.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page=1">First Page</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{pg_posts.previous_page_number}}">Previous Page</a></li>
+            {% endif %}
+            {% if pg_posts.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{pg_posts.next_page_number}}">Next Page</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{pg_posts.paginator.num_pages}}">Last Page</a></li>
+            {% endif %}    
+        </ul>
+    </nav>
 {% endblock %}
